# filloabot-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-multiarch.yml
src/: main.rs
src/commands/: chatbot.rs  mod.rs  music.rs  ping.rs
src/commands/music/: clear.rs  join.rs  leave.rs  mod.rs  next.rs  pause.rs  play.rs  queue.rs  resume.rs  stop.rs
src/utils/: chatbot.rs  mod.rs
src/utils/api/: main.rs  mod.rs  references.rs
