[package]
name = "filloabot-rs"
version = "0.1.0"
authors = ["peprolinbot <personal@peprolinbot.com>"]
edition = "2021"


[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
regex = "1"
serde_json = "1.0"
serde_regex = "1.1.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
features = ["cache", "framework", "client", "standard_framework", "voice", "rustls_backend"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.songbird]
version = "0.3"
features = ["builtin-queue"]