[package]
name = "filloabot-rs"
version = "0.1.0"
authors = ["peprolinbot <personal@peprolinbot.com>"]
edition = "2021"


[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
regex = "1"
serde_json = "1.0"
serde_regex = "1.1.0"
lazy_static = "1.4.0"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "voice"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.songbird]
version = "0.3"
features = ["builtin-queue"]